2012-12-14  Jean-Louis Martineau <martineau@zmanda.com>
	* server-src/amtape.pl: Add a verify subcommand.
	* man/xml-source/amtape.8.xml: Document the verify subcommand.
	* perl/Amanda/Changer.pm: Add default verify method.
	* perl/Amanda/Changer/robot.pm (verify): Verify the drive and device
	  matches.
	* perl/Amanda/Device.pod: Typo.

2012-12-13 Dan Locks <dwlocks@zmanda.com>
	* packaging/common/post_inst_functions.sh: revoke rw permissions for
	  group and other
	* packaging/common/post_rm_functions.sh: fix function name to match
	  usage.
	* packaging/common/test_sh_libs.sh: update test.

2012-12-13  Jean-Louis Martineau <martineau@zmanda.com>
	* server-src/amrmtape.pl: Die if opening CURINFO for writing fail.

2012-12-12 Dan Locks <dwlocks@zmanda.com>
	* packaging/common/post_inst_functions.sh: don't use uuencode -m for
	  solaris 8 compatibility.

2012-12-11  Jean-Louis Martineau <martineau@zmanda.com>
	* perl/Amanda/Changer/multi.pm, server-src/amcheck-device.pl: Fix perl
	  warning.

2012-12-10  Jean-Louis Martineau <martineau@zmanda.com>
	* server-src/logfile.c (log_rename): Donot abort if the log do not
	  exists.

2012-12-10  Jean-Louis Martineau <martineau@zmanda.com>
	* man/xml-source/amanda-devices.7.xml: Typo, s/SWITF/SWIFT/.

2012-12-10  Jean-Louis Martineau <martineau@zmanda.com>
	* perl/Amanda/Taper/Scribe.pm: Log FAILED if nothing is written to
	  tape.
	* server-src/amstatus.pl: Check ntape is defined.

2012-12-07 Dan Locks <dwlocks@zmanda.com>
	* packaging/common/post_inst_functions.sh: use amandausers's .gnupg/
	  instead of installing user's, and suppress warnings about
	  permissions.

2012-12-07 Dan Locks <dwlocks@zmanda.com>
	* common_z/post_inst_functions.sh: head and tail invocation may only
	  use "-#", not "-n #" for solaris 8 compatibility

2012-12-07  Jean-Louis Martineau <martineau@zmanda.com>
	* contrib/convert-zd-mtx-to-robot.sh: set tpchanger instead of
	  tapedev.

2012-12-07  Jean-Louis Martineau <martineau@zmanda.com>